--- a/src/components/Details/Details.module.css
+++ b/src/components/Details/Details.module.css
@@ -115,6 +115,12 @@
   }
 }
 
+@media screen and (max-width: 610px) {
+  .post-section .img-wrapper {
+    width: 100%;
+  }
+}
+
 .post-section h2 {
   font-size: 3.2rem;
 }
