--- a/src/components/MyProfile/LikedPostsView/LikedPostsView.module.scss
+++ b/src/components/MyProfile/LikedPostsView/LikedPostsView.module.scss
@@ -5,6 +5,14 @@
     grid-template-columns: 1fr 1fr 1fr;
     width: 100%;
     justify-items: center;
+
+    @media screen and (max-width: 1670px) {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    @media screen and (max-width: 1000px) {
+        grid-template-columns: 1fr;
+    }
 }
 
 .no-results {
