--- a/src/components/MyProfile/MyProfile.module.scss
+++ b/src/components/MyProfile/MyProfile.module.scss
@@ -2,6 +2,10 @@
 
 .outher{
     padding: 50px 0;
+
+    @media screen and (max-width: 510px) {
+       padding: 0;
+    }
 }
 
 .page-wrapper {
@@ -32,7 +36,25 @@
                     position: absolute;
                     left: 9px;
                 }
+
+                @media screen and (max-width: 1750px) {
+                    width: 73px;
+                    height: 73px;
+                }
+
+                @media screen and (max-width: 1500px) {
+                    width: 68px;
+                    height: 68px;
+
+                    svg {
+                        left: 8px;
+                    }
+                }
             }    
+
+            @media screen and (max-width: 1050px) {
+                margin-bottom: 10px;
+            }
         }
 
         .buttons-section {
@@ -53,9 +75,32 @@
 
             button:nth-child(1) {
                 margin-right: 30px;
+
+                @media screen and (max-width: 605px) {
+                    margin-right: 0;
+                    margin-bottom: 10px;
+                }
+            }
+
+            @media screen and (max-width: 720px) {
+                button {
+                    padding: 10px 70px;
+                }
+            }
+
+             @media screen and (max-width: 605px) {
+                display: flex;
+                flex-direction: column;
             }
         }
+        
 
+       
+        
+
+        @media screen and (max-width: 1050px){
+            flex-direction: column;
+        }
     }
 
     .main-section {
@@ -64,5 +109,13 @@
             margin-top: 20px;
             text-transform: uppercase;
         }
+    }
+
+    @media screen and (max-width: 1750px) {
+        width: 90%;
+    }
+
+    @media screen and (max-width: 510px) {
+        width: 100%;
     }
 }
