hamburger menu added

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,4 +12,10 @@ main {
   position: relative;
   min-height: 100vh;
 }
+
+@media screen and (max-width: 770px) {
+  main {
+    margin-top: 120px;
+  }
+}
 /*# sourceMappingURL=App.module.css.map */
