--- a/src/shared/css/general.scss
+++ b/src/shared/css/general.scss
@@ -167,8 +167,8 @@ $post-body-font-size: 1.1rem;
     border: 1px solid;
     padding: 10px 20px;
     border-radius: 8px;
+    position: relative;
     
-
     svg {
         margin-right: 5px;
     }   
