--- a/src/components/Details/Details.module.scss
+++ b/src/components/Details/Details.module.scss
@@ -5,7 +5,7 @@
     width: 85%;
     min-height: 90vh;
     margin: 20px auto;
-    text-align: center;
+    text-align: justify;
     background: $base-color-dark;
     padding: 4%;
     border-radius: 6px;
@@ -45,7 +45,7 @@
             .confirmSection, .hideConfirmSection {
                 position: absolute;
                 z-index: 11;
-                top: -105px;
+                top: 55px;
                 right: -65px;
                 width: 360px;
                 border: 1px solid $accent-yellow-color-dark;
@@ -70,13 +70,20 @@
                 opacity: 0;
             }
 
-            @media screen and (max-width: 450px) {
-                .confirmSection .hideConfirmSection{
+            @media screen and (max-width: 850px) {
+                .confirmSection, .hideConfirmSection{
                     right: -45px;
+                    width: 300px;
                 }
                 
             }
 
+            @media screen and (max-width: 850px) {
+                .confirmSection, .hideConfirmSection{
+                    right: -30px;
+                }
+                
+            }
         }
         
     }
@@ -108,8 +115,13 @@
     .source-link{
         margin: 0 5px;
     }
+
+    h2, .footer {
+        text-align: center;
+    }
 }
 
 .action-link:hover, .source-link:hover {
     color: $accent-yellow-color-dark;
 }
+
