--- a/src/components/Edit/Edit.module.css
+++ b/src/components/Edit/Edit.module.css
@@ -98,25 +98,19 @@
   color: #F9C807;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1350px) {
   .form-wrapper form {
     width: 60%;
   }
 }
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 1200px) {
   .form-wrapper form {
     width: 75%;
   }
 }
 
-@media screen and (max-width: 650px) {
-  .form-wrapper form {
-    width: 90%;
-  }
-}
-
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 900px) {
   .form-wrapper form {
     width: 100%;
   }
@@ -124,6 +118,18 @@
 
 .form-wrapper button.post-form-button {
   font-size: 1.3rem;
+}
+
+@media screen and (max-width: 550px) {
+  .form-wrapper {
+    padding: 5%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .form-wrapper {
+    padding: 2%;
+  }
 }
 
 .form-wrapper form {
