--- a/src/components/CreatePost/CreatePost.module.css
+++ b/src/components/CreatePost/CreatePost.module.css
@@ -4,6 +4,7 @@
   padding: 11% 20%;
   min-height: 100vh;
   padding: 7%;
+  position: relative;
 }
 
 .form-wrapper form {
@@ -98,25 +99,19 @@
   color: #F9C807;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1350px) {
   .form-wrapper form {
     width: 60%;
   }
 }
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 1200px) {
   .form-wrapper form {
     width: 75%;
   }
 }
 
-@media screen and (max-width: 650px) {
-  .form-wrapper form {
-    width: 90%;
-  }
-}
-
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 900px) {
   .form-wrapper form {
     width: 100%;
   }
@@ -126,8 +121,39 @@
   font-size: 1.3rem;
 }
 
+@media screen and (max-width: 550px) {
+  .form-wrapper {
+    padding: 5%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .form-wrapper {
+    padding: 2%;
+  }
+}
+
 .form-wrapper form {
   position: relative;
+}
+
+.form-wrapper .legend {
+  position: absolute;
+}
+
+@media screen and (max-width: 1350px) {
+  .form-wrapper .legend {
+    left: 10px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .form-wrapper {
+    padding-bottom: 100px;
+  }
+  .form-wrapper .legend {
+    bottom: 5px;
+  }
 }
 
 .confirmation-msg {
